eks/internal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-internal
  annotations:
    #    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: $HOST_INTERNAL
      http:
        paths:
          - path: /$SERVICE_NAME(/|$)(.*)
            backend:
              serviceName: $SERVICE_NAME
              servicePort: $PORT_NUMBER
